demos/breakfast/breakfast-web/src/main/resources/com/rosa/breakfast/web/stylesheet/site.css
body {
  background-image: url(images/background.jpg) ;
  width: 950px;
  background-position: top;
  background-color:rgb(192,182,172); 
}

/* logo font Bauhaus 93 */
#banner {
  height: 190px;
  background: url(images/rosas-header.jpg) no-repeat;
  background-position: top;
}

#bannerLeft {
  display:none; 
}

#breadcrumbs {
  display:none; 
  height: auto;
  background-image: none;
  padding: 5px 10px 14px 20px;
}

#leftColumn {
  width: 150px;
  float:left;
  overflow: auto;
  margin-left: 12px;
  margin-right: 8px;
}

#bodyColumn {
  margin-right: 5px;
  margin-left: 205px;
  padding-right: 10px;
}

table.bodyTable {
  border: none;
  padding-bottom: 5px;
}

table.bodyTable th, table.bodyTable td {
  vertical-align: middle;
}

.button {
	width: 80px;
	font-size: 10px;
}

td.butcol {
    width: 80px;
}

#buts {
  padding: 5px 0 10px 0;
  margin: 10px 0 10px 0;
  border-top: solid #ccc 1px; 
}

h4 {
  padding: 2px 2px 2px 9px;
  color: #666;
  background-color: #ccc;
  font-weight: bold;
  font-style: italic;
  font-size: 12px;
}

#feedbackPanel ul {
  background-color: PeachPuff;
  border: 1px solid DarkRed;
}

#feedbackPanel li {
  color: DarkRed;
  list-style-image: url(images/icon_error_sml.gif);
  font-weight: bold;
  vertical-align: middle;
  padding: 3px;
}

